--- a/profile.html
+++ b/profile.html
@@ -203,7 +203,7 @@
 			</div>	
 		</main>
 		<footer class="p-4 sm:p-6" style="background-image: url(/img/footer.png)">
-			<div class="md:flex md:justify-between">
+			<div class="md:flex md:justify-between mx-auto max-w-7xl">
 				<div class="mb-6 md:mb-0">
 					<a href="/index.html" class="flex items-center">
 						<img src="/img/logoSmall.png" class="mr-3" alt="FlowBite Logo" />
